# UAV-Kinematic-Optimizer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_CN.md
config/: config.h  params.h
core/: problem1.cpp  problem2.cpp  problem3.cpp  problem4.cpp  problem5-grid-search.cpp  problem5-hill-climbing.cpp  problem5-simulator.cpp
data/: problem5-grid-search-strategy.csv  problem5-hill-climbing-strategy.csv  problem5-simulator-strategy.csv
viz/: requirements.txt  strategy-visualizer.py
